# cnpj-api

./: .dockerignore  .env.example  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.staging.yml  compose.yaml  estabelecimento.py  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/cnaes/: __init__.py  router.py  schemas.py  service.py
app/api/v1/empresas/: __init__.py  router.py  schemas.py  service.py
app/api/v1/estabelecimentos/: __init__.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  pagination.py
app/etl/: README.md  __init__.py  __main__.py  base.py  session.py
app/etl/pipelines/: __init__.py  cnaes.py  empresas.py  estabelecimentos.py  motivos.py  municipios.py  naturezas.py  paises.py  qualificacoes.py  simples.py
app/models/: cnae.py  empresa.py  estabelecimento.py  motivo.py  municipio.py  natureza.py  pais.py  qualificacao.py  simples.py
app/repositories/: __init__.py  cnae.py  empresa.py  estabelecimento.py  motivo.py  municipio.py  natureza.py  pais.py  qualificacao.py  simples.py
docker/: Dockerfile  start.sh
migrations/: env.py
migrations/versions/: 74bcfdc9d13e_create_table_simples.py  785c118896c7_create_table_empresas.py  84ef9985c0a3_alter_table_estabelecimentos_foreign_key.py  898f5c15b2c6_create_table_municipios.py  abfe1b6195ae_create_table_motivos.py  aefbc11769ea_create_table_qualificacoes.py  b30001b0996f_create_table_estabelecimentos.py  b7eefe5b3e0a_create_table_naturezas.py  cf895cd43dc1_create_table_cnaes.py  fe5eb4665640_create_table_paises.py
(+23 files in other folders)
